--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -828,7 +828,7 @@
         {
           "data_type": "RenderMeshDef",
           "data" : {
-            "source_file":"meshes/mid_ground_tree.fplmesh",
+            "source_file":"meshes/tree_saturated.fplmesh",
             "shader": "shaders/textured_opaque",
           }
         }
@@ -849,9 +849,9 @@
                   {
                     "data_type": "TransformDef",
                     "data": {
-                      "scale": { "x": 1.0, "y": 1.0, "z": 1.0 },
+                      "scale": { "x": 1.0, "y": 1.0, "z": -1.0 },
                       "position": { "x": 0.0, "y": 0.0, "z": 1.0 },
-                      "orientation": { "x": 10.0, "y": -90.0, "z": 0.0 }
+                      "orientation": { "x": 0.0, "y": 90.0, "z": 0.0 }
                     }
                   },
                   {
@@ -868,9 +868,9 @@
                   {
                     "data_type": "TransformDef",
                     "data": {
-                      "scale": { "x": 1.0, "y": 1.0, "z": 1.0 },
+                      "scale": { "x": 1.0, "y": 1.0, "z": -1.0 },
                       "position": { "x": 0.7, "y": 1.0, "z": 0.0 },
-                      "orientation": { "x": -60.0, "y": -90.0, "z": 60.0 }
+                      "orientation": { "x": 0.0, "y": 90.0, "z": 0.0 }
                     }
                   },
                   {
@@ -889,7 +889,7 @@
                     "data": {
                       "scale": { "x": 1.0, "y": 1.0, "z": 1.0 },
                       "position": { "x": 0.2, "y": 1.5, "z": 1.0 },
-                      "orientation": { "x": -90.0, "y": -90.0, "z": 90.0 }
+                      "orientation": { "x": 00.0, "y": 90.0, "z": 0.0 }
                     }
                   },
                   {
@@ -1069,7 +1069,7 @@
       "entity": "kMidGroundTree",
       "count": 9,
       "radius": 15,
-      "position_offset_angle": 10, 
+      "position_offset_angle": 10,
       "orientation_offset_angle": 90,
       "position": { "x": 0, "y": 0, "z": 0 },
       "scale": { "x": 7, "y": 5, "z": 3 }
