Added a digit component, raft and sign.
The digit component that updates an entity's mesh based on some
attribute of the player. This is used for displaying meshes in the world
that represents score on signs.

Also hooked up the raft mesh and threw a sign on it that utilizes the
digit component to display your score.

Tested on Linux and Android.

Change-Id: I3ab57654c817d423bdd50a72e269dfc54e0c2cac

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -192,6 +192,8 @@ add_custom_command(TARGET assets POST_BUILD
 set(zooshi_SRCS
     src/camera.cpp
     src/camera.h
+    src/components/digit.cpp
+    src/components/digit.h
     src/components/attributes.cpp
     src/components/attributes.h
     src/components/audio_listener.cpp
