Moved rail definitions to components, and made editable.
Rails are now defined in entity_rails.json, as a series of entities
with a RailNode component definition.

RailNode specifies the order of the nodes, and the rail name
(a string); RailManager can then get you a rail from the strings.

Tested: Press F10 to go into the editor, then select a rail node
and move it with IJKL. After you exit, you will follow the new rail.

Change-Id: I46bbe4b25914ea56ea46c18ebc5a73ce14bfaf4d

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -210,6 +210,8 @@ set(zooshi_SRCS
     src/components/player_projectile.h
     src/components/rail_denizen.cpp
     src/components/rail_denizen.h
+    src/components/rail_node.cpp
+    src/components/rail_node.h
     src/components/rendermesh.cpp
     src/components/rendermesh.h
     src/components/river.cpp
