--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -48,6 +48,7 @@
   },
 
   "entity_files" : [
+    "entity_rails.bin",
     "entity_list.bin",
     "entity_level0.bin",
     "entity_decorations.bin",
