Change raw data to the individual component data type.
Also refactor out the entity factory into a more generic class that can
handle not knowing about the components flatbuffer.

Also moved the first several components we will be putting into the
component library into base_components.fbs.

As of now, neither the world editor nor the components themselves
need to know anything about the specific Flatbuffer table type you are
using for loading component data. Everything is abstracted away by
the EntityFactory; you must subclass it and overwrite a few specific
functions to tell the entity factory how to read and write your data.

This is another prerequisite to making a standard component library.

Change-Id: I7ad7ff69bbaef1e0ac8a8a007e2542713f92a6b6
Tested: Builds on Linux and Mac for desktop and Android. Tested
only on Linux so far.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -228,6 +228,8 @@ set(zooshi_SRCS
     src/components/transform.h
     src/editor/world_editor.cpp
     src/editor/world_editor.h
+    src/entity_factory.cpp
+    src/entity_factory.h
     src/events/change_rail_speed.h
     src/events/collision.h
     src/events/modify_attribute.h
