Move objects relative to camera in world editor.
Also, add `precise movement` option, when shift key is held.

Make blob shadows unselectable. Missed these in a previous change.

Tested: Works on Linux.
Change-Id: Ief274555ffd5527beec9ab8d6b024878c19958c7

--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -40,6 +40,7 @@
     "object_movement_speed":0.25,
     "object_angular_speed":3,
     "object_scale_speed":1.05,
+    "precise_movement_scale":0.1,
     "input_config": {
       "mouse_sensitivity": 0.001,
       "invert_x": false,
