Removed Blob Shadows and added Shadow Maps
Lots of graphical changes.

Depends on change: I4ac24e4a62b19489773f816061c94efa04a8e423

* Added shadowmapping to rendermesh
* Wrote shadowmapping shaders
* Removed blob-shadows
* Made RenderMesh.currently_hidden way more efficient
* Patrons that are laying down now hide.
* Moved responsibility for rendering the scene out of rendermesh
  and into a new class, WorldRenderer.
* Exposed some functionality of rendermesh to allow finer grain
  control of what gets drawn to the screen.

Note - There is a fair amount of shadow-acne on android at the
moment - this will be fixed in a subsequent checkin.

Tested in Linux and Android

Change-Id: I3bdb491959d3bef24d57b7bfe8ddc01f14af24c6

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -260,6 +260,8 @@ set(zooshi_SRCS
     src/world.h
     src/world_editor_state.cpp
     src/world_editor_state.h
+    src/world_renderer.cpp
+    src/world_renderer.h
     src/zooshi_entity_factory.cpp
     src/zooshi_entity_factory.h
     # For outputting flatbuffer files as json.
