--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -32,6 +32,14 @@
     "width": 5.0
   },
 
+  "rendering_config" : {
+    "shadow_map_resolution": 1024,
+    "shadow_map_zoom": 2.0,
+    "shadow_map_offset": 6.0,
+    "light_position": { "x": 0.0, "y": 0.0, "z": 60 },
+    "shadow_intensity": 0.33,
+   },
+
   "world_editor_config" : {
     "schema_file_text" : "flatbufferschemas/components.fbs",
     "schema_file_binary" : "flatbufferschemas/components.bfbs",
