Add Lady Mandrill model.
Previous (ad hoc billboard) model was facing the wrong direction,
so had to rotate all instances in entity_level0.json by 180
degrees.

Also, ignore the new font shaders that are being copied into the
assets directory.

Note--specular texture is not yet coming through.

Tested: Played through the first time around river on Linux and
Android.
Change-Id: I774f42cf4e7c05125b4b6533d70fdfc2d931c551

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ assets/flatbufferschemas/
 assets/*.json
 assets/fonts/
 assets/shaders/font.*
+assets/shaders/font_*
 
 # CMake files
 CMakeCache.txt
