Update WorldEditor init call, and add a config option.
WorldEditor now needs the renderer so it can get the screen size.
It also has a config option to customize which button press lets you
toggle between moving and editing.

More input configuration options will be coming in the future.

Change-Id: I18da6853fd713ebcc76778fee711dfff2178ebda

--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -42,6 +42,7 @@
     "object_scale_speed":1.05,
     "precise_movement_scale":0.1,
     "mouse_sensitivity": 0.001,
+    "toggle_mode_button": 2
   },
 
   "entity_files" : [
