Added simple fog to the textured_shadowed renderer.
Added basic depth-based fog to the textured_shadowed shader.  Also
added some comments and structure to the shader file, to make
it more obvious where each phase begins.

Change-Id: If6cabacc7a1fdfc851c1a09c7a1e0a27a6364cf8

--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -38,6 +38,10 @@
     "shadow_map_offset": 6.0,
     "light_position": { "x": 0.0, "y": 0.0, "z": 60 },
     "shadow_intensity": 0.33,
+    "fog_roll_in_dist":10,
+    "fog_max_dist": 3000,
+    "fog_color": {"r":0.95, "g":0.9, "b":0.7, "a":1.0},
+    "fog_max_saturation": 0.5
    },
 
   "world_editor_config" : {
