--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -41,7 +41,8 @@
     "fog_roll_in_dist":10,
     "fog_max_dist": 3000,
     "fog_color": {"r":0.95, "g":0.9, "b":0.7, "a":1.0},
-    "fog_max_saturation": 0.5
+    "fog_max_saturation": 0.5,
+    "cull_distance": 50
    },
 
   "world_editor_config" : {
