Adding new lake textures for the river
Also bringing back the water shader as it was originally written, as
the current one we have now does not work with the Lake textures.

Tested on Linux and Android

Change-Id: Ia8473884f2821c544c24b4ae8dc9d6a1b514e59b

--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -16,8 +16,8 @@
     "spline_stepsize": 500.0,
     "track_height": -1.89,
     "texture_tile_size": 25.0,
-    "material": "materials/river.fplmat",
-    "shader": "shaders/water",
+    "material": "materials/Lake_daytime.fplmat",
+    "shader": "shaders/origwater",
     "banks": [
       { "x_min": -13.5, "x_max": -13.5, "z_min": 1.0, "z_max": 2.2 },
       { "x_min": -7.5,  "x_max": -8,    "z_min": 0.6, "z_max": 0.9 },
