--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -26,7 +26,7 @@
       { "x_min": 0,     "x_max": 0.6,   "z_min": 0.0, "z_max": 0.0 },
       { "x_min": 0.5,   "x_max": 1.2,   "z_min": 0.2, "z_max": 0.4 },
       { "x_min": 3.5,   "x_max": 8.0,   "z_min": 0.6, "z_max": 0.9 },
-      { "x_min": 8.5,   "x_max": 13.5,  "z_min": 1.8, "z_max": 2.2 },
+      { "x_min": 8.5,   "x_max": 13.5,  "z_min": 1.8, "z_max": 2.2 }
     ],
     "river_index": 3,
     "width": 5.0
