Tweaks to speed up rendering.
* Moved nearly all objects to the opaque render pass to take better
  advantage of z-buffering.
* Reduced dependency on shaders that require multiple texture reads
  per pixel.

Change-Id: Id25ae2793999bad65a7a887c335d4e8716000495

--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -42,7 +42,8 @@
     "fog_max_dist": 3000,
     "fog_color": {"r":0.95, "g":0.9, "b":0.7, "a":1.0},
     "fog_max_saturation": 0.5,
-    "cull_distance": 50
+    "cull_distance": 50,
+    "create_shadow_map":false
    },
 
   "world_editor_config" : {
